--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>ismail</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body>
+
   <table cellspacing="20">
     <tr>
       <td><img src="images/ismail pic-modified.png" alt="ismail profil picture"></td>
@@ -52,14 +57,19 @@
   </table>
   <h3>my hobbies</h3>
   <hr>
+  <img class="gamming circular" src="images/next.jpg" alt="my gamming picture">
+
   <ol start="i">
     <li>swimming</li>
-    <li>gamming</li>
+    <li> <a href="https://www.youtube.com/channel/UC5IWQu2hg68PKU9Pu95dMDA/featured">gamming</a> </li>
     <li>football</li>
     <li> <a href="https://www.kotobati.com/rich-dad-poor-dad-pdf">reding</a> </li>
-    <h3><a href="contact me.html"> <i><strong> contact me</strong></i> </a> </h3>
-    <hr>
+
+
   </ol>
+
+  <h3><a href="contact me.html"><i><strong> contact me</strong></i></a> </h3>
+  <hr>
   <h3>skilles</h3>
   <hr>
   <table cellspacing="10">
