--- a/contact me.html
+++ b/contact me.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>my contact</title>
-  </head>
-  <body>
-    <ul>
-      <li>my address: fake address</li>
-      <li>my email:aaa@GMAIL.COM</li>
-      <li>my number:0666934423</li>
-    </ul>
+
+<head>
+  <link rel="stylesheet" href="css/style.css">
+
+
+  <meta charset="utf-8">
+  <title>my contact</title>
+</head>
+<h1>
+
+  <strong><i>my contact:</i></strong>
+
+</h1>
+<hr>
+
+
+<ul>
+  <li>my address: fake address</li>
+  <li>my email:aaa@GMAIL.COM</li>
+  <li>my number:0666934423</li>
+</ul>
+<hr>
 <form action="mailto:wahman1912@gmail.com" method="post" enctype="text/plain">
   <label>your name:</label>
   <input type="text" name="your name" value="">
@@ -17,8 +29,8 @@
   <label>your email :</label>
   <input type="email" name="yourEmail" value=""><br>
   <label>your massage:</label><br>
-    <textarea name="message" rows="10" cols="30"></textarea>
-  <input type="submit" name="submit" >
+  <textarea name="message" rows="10" cols="30"></textarea>
+  <input type="submit" name="submit">
 
 
 
@@ -32,5 +44,6 @@
 
 
 
-  </body>
+</body>
+
 </html>
